# Chatbot_Open_AI_SDK

./: README.md
chinlite/: README.md  pyproject.toml
chinlite/src/: .env  chainlit.md  chatbot.py
chinlite/src/chinlite/: __init__.py
